using System.Collections;
using System.Collections.Generic;
using UnityEngine;


public class Constants : MonoBehaviour
{
    public const string ANIM_WALK = "walk";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_SIT_DOWN = "sit_down";
    public const string ANIM_STAND_UP = "stand_up";
}
